# youtube-analytics-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile
etl/: Dockerfile  pyproject.toml
etl/scripts/: init_db.py  run_pipeline.sh  verify_data.py
etl/sql/: schema.sql
etl/src/: main.py
etl/src/extract/: youtube_api.py
etl/src/transform/: clean_data.py
metabase/: dashboard_queries.sql  docker-compose.yml
scripts/: test_connection.py
src/load/: load_sql.py
